--- a/index.html
+++ b/index.html
@@ -344,11 +344,37 @@
 
                      </div>
                 </div>
-
-
             </div>
-            
         </section>
+
+        <section class="partners">
+            <div class="brands__wrapper">
+                <img src="./Images/jquery.png" alt="">
+                <img src="./Images/jr.png" alt="">
+                <img src="./Images/unique.png" alt="">
+                <img src="./Images/wp.png" alt="">
+                <img src="./Images/am.png" alt="">
+            </div>
+        </section>
+
+        <section class="contact">
+            <h1 class="section__heading">Contact Me</h1>
+            <div class="wrapper">
+                <div class="left">
+                    <div class="">
+                        <div class="">
+                            <i class="uil uil-phone-volume"></i>
+                        </div>
+                        <div class="">
+                            <h4>Free Call to Me: </h4>
+                            <span>+4559435943</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">Right</div>
+            </div>
+        </section>
+
 
     </main>
 
