--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <div class="skill-box">
                         <h4>HTML & CSS3</h4>
                         <div class="progress__wrap">
-                            <span data-percent="78" class="progress__bar">
+                            <span data-percent="95" class="progress__bar">
                                 <span class="tooltip">78%</span>
                             </span>
                         </div>
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                     <div class="skill-box">
-                        <h4>UI/UX DESIGN</h4>
+                        <h4>Javascript</h4>
                         <div class="progress__wrap">
                             <span data-percent="80" class="progress__bar">
                                 <span class="tooltip">80%</span>
@@ -218,9 +218,9 @@
                         </div>
                     </div>
                     <div class="skill-box">
-                        <h4>PHOTOSHOP & ADOBE XD</h4>
+                        <h4>Backend Development</h4>
                         <div class="progress__wrap">
-                            <span data-percent="95" class="progress__bar">
+                            <span data-percent="60" class="progress__bar">
                                 <span class="tooltip">95%</span>
                             </span>
                         </div>
