Added Thumbnail for Featured Links

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Thumbnail for featured links  -->
+    <meta name="description" content="_" />
+    <meta name="title" property="og:title" content="_" />
+    <meta property="og:type" content="_" />
+    <meta name="image" property="og:image" content="https://avatars0.githubusercontent.com/u/65647302?s=460&u=dd2108cc67de2e88621d622a1a50b7994817a227&v=4" />
+    <meta name="description" property="og:description" content="_" /><meta name="author" content="_" />
+      <!-- Thubnail feature completed here  -->
+    
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v2.1.3/css/unicons.css">
     <link rel="stylesheet" href="./plugins/headline/headline.css">
     <link rel="stylesheet" href="./plugins/magnify.css">
