Added Thumbnail for featured links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="left">
 
                 <div class="avatar__block">
-                    <img src="https://avatars0.githubusercontent.com/u/65647302?s=460&u=dd2108cc67de2e88621d622a1a50b7994817a227&v=4" alt="">
+                    <img src="https://raw.githubusercontent.com/Lord-Aman/Portfolio-matte/gh-pages/Images/Thumbnail.png" alt="">
                     <span>
                         <i class="uil uil-comment-dots"></i>
                     </span>
