Added thumbnail link for Featured Links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="left">
 
                 <div class="avatar__block">
-                    <img src="https://raw.githubusercontent.com/Lord-Aman/Portfolio-matte/gh-pages/Images/Thumbnail.png" alt="">
+                    <img src="https://live.staticflickr.com/65535/50727134996_99cfd54d96_b.jpg" alt="">
                     <span>
                         <i class="uil uil-comment-dots"></i>
                     </span>
