--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="_" />
     <meta name="title" property="og:title" content="_" />
     <meta property="og:type" content="_" />
-    <meta name="image" property="og:image" content="https://avatars0.githubusercontent.com/u/65647302?s=460&u=dd2108cc67de2e88621d622a1a50b7994817a227&v=4" />
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/50727134996_99cfd54d96_b.jpg" />
     <meta name="description" property="og:description" content="_" /><meta name="author" content="_" />
       <!-- Thubnail feature completed here  -->
     
@@ -44,7 +44,7 @@
             <div class="left">
 
                 <div class="avatar__block">
-                    <img src="https://live.staticflickr.com/65535/50727134996_99cfd54d96_b.jpg" alt="">
+                    <img src="https://avatars0.githubusercontent.com/u/65647302?s=460&u=dd2108cc67de2e88621d622a1a50b7994817a227&v=4" alt="">
                     <span>
                         <i class="uil uil-comment-dots"></i>
                     </span>
